<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main6Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="386dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/zn1"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="217dp"
            app:srcCompat="@drawable/et" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/strpr"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/temp"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/exp2"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Strg"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/holo_red_light"
            android:clickable="true"
            android:text="@string/defrst"
            android:textColor="@android:color/background_light"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/holo_blue_bright"
            android:clickable="true"
            android:text="@string/nwprdoduct"
            android:textColor="@android:color/background_light"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>