<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main4Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="85dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/zone3"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="236dp"
            app:srcCompat="@drawable/koofte" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/text1"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/temperature"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/date2"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/date3"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="95dp"
            android:background="@android:color/holo_blue_bright"
            android:gravity="bottom"
            android:text="@string/newprdoduct"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="0dp"
            android:background="@color/colorAccent"
            android:gravity="bottom"
            android:text="@string/stopdefrosting"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>